--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -106,5 +106,7 @@
     <string name="experience_title">:שנות ניסיון</string>
     <string name="requirements_title">:דרישות המשרה</string>
     <string name="email_title">שליחת קו"ח אל</string>
+    <!-- chat -->
+    <string name="send_msg">שידור</string>
 
 </resources>
